<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/ins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ins_content"
        android:layout_width="341dp"
        android:layout_height="98dp"
        android:justificationMode="inter_word"
        android:text="@string/ins_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="@+id/ins"
        app:layout_constraintTop_toBottomOf="@+id/ins" />


    <TextView
        android:id="@+id/choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_level"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ins_content"
        app:layout_constraintTop_toBottomOf="@+id/ins_content"
        app:layout_constraintVertical_bias="0.087" />

    <RadioGroup

        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/ins_content"
        app:layout_constraintStart_toStartOf="@+id/choose"
        app:layout_constraintTop_toBottomOf="@id/choose">

        <RadioButton
            android:id="@+id/easy"
            android:checked="true"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:tag="easy_tag"
            android:text="@string/easy" />

        <RadioButton
            android:id="@+id/medium"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:tag="medium_tag"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/hard"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:tag="hard_tag"
            android:text="@string/hard" />
    </RadioGroup>


    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:textColor="@color/orange"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/checkBtn"
        app:layout_constraintStart_toStartOf="@+id/checkBtn"
        app:layout_constraintTop_toBottomOf="@+id/checkBtn"
        app:layout_constraintVertical_bias="0.735" />

    <TextView
        android:id="@+id/pointsVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/orange"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/checkBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/points"
        app:layout_constraintTop_toTopOf="@+id/points" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:orientation="horizontal"
        app:flow_horizontalAlign="center"
        app:layout_constraintEnd_toEndOf="@+id/ins_content"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="@+id/ins_content"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2">

        <TextView
            android:id="@+id/value1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/operator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:text="+"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/value2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:text="2"

            android:textSize="40sp" />


    </LinearLayout>

    <EditText
        android:id="@+id/answer"
        android:layout_width="345dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:hint="@string/your_answer"
        android:inputType="numberSigned"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ins_content"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@+id/ins_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/checkBtn"
        android:layout_width="346dp"
        android:layout_height="49dp"
        android:text="@string/check"
        app:layout_constraintStart_toStartOf="@+id/answer"
        app:layout_constraintTop_toBottomOf="@+id/answer"
        />


</androidx.constraintlayout.widget.ConstraintLayout>